Add Support for AWS MQTT based IAqualink devices, such as Zodiac Hydroxinator
Signed-off-by: Jonathan Gilbert <jpg@trillica.com>